# auto-sway

./: Cargo.toml  LICENSE  README.md
src/: command.rs  lib.rs  nodes.rs  rect.rs
src/command/: display.rs  resize.rs
tests/: cli.rs
